--- a/front-end/portafolio/src/app/features/home/home.component.html
+++ b/front-end/portafolio/src/app/features/home/home.component.html
@@ -15,7 +15,8 @@
 
 <!-- Projects Section -->
 <app-projects-section
-  [projects]="projects">
+  [projects]="projects"
+  [loading]="loadingProjects">
 </app-projects-section>
 
 <!-- Contact Section -->
